adding code with entity module

--- a/Pipfile
+++ b/Pipfile
@@ -2,7 +2,9 @@
 # Run main application: pipenv run python app/main.py
 # Run tests (skip integration): pipenv run pytest -m "not integration"
 # Run all tests: pipenv run pytest
-# Run tests with coverage and HTML report: pipenv run pytest --cov=src --cov=tests --cov-report=html --cov-report=term-missing -m "not integration"
+# Run tests with coverage and HTML report: pipenv run pytest --cov=src --cov-report=html --cov-report=term-missing -m "not integration"
+# pipenv run pytest --cov=src --cov-report=html --cov-report=term-missing -m "not integration" tests/
+# pipenv run pytest --cov=src --cov-report=html tests/
 # View HTML coverage report: open htmlcov/index.html
 # Run MyPy type checking: pipenv run mypy --explicit-package-bases .
 
@@ -14,6 +16,7 @@ name = "pypi"
 [packages]
 mysql-connector-python = "*"
 inflection = "*"
+python-dotenv = "*"
 
 [dev-packages]
 pytest = "*"
